2016-05-19 Riccardo Mottola <rm@gnu.org>

	* TerminalView.m
	attempt to handle vertical resize and cursor placement better

2016-03-12 Riccardo Mottola <rm@gnu.org>

	* English.lproj/Localizable.strings
	* TerminalWindow.h
	* TerminalWindow.m
	* main.m
	* Services.m
	Add tab support. Adaptation of patch by Tim Sheridan

2016-03-01 Riccardo Mottola <rm@gnu.org>

	* French.lproj/Localizable.string
	Enhanced French localizations.

2014-09-09 Gregory John Casamento <greg.casamento@gmail.com>

	* TerminalParser_Linux.m: Add case to handle escape code.
	* TerminalView.h: Add representedFilename
	* TerminalView.m: Add methods.
	* TerminalWindow.m: Add code to call setRepresentedFilename on
	terminal window.

2014-09-09 Riccardo Mottola <rm@gnu.org>

	* TerminalViewPrefs.m
	Do not use isa pointer.

2014-01-05 Riccardo Mottola <rm@gnu.org>

	* ServicesPrefs.h
	Adopt NSTableViewDelegate protocol to fix warning.

2013-02-17 Riccardo Mottola <rm@gnu.org>

	* Terminal.h
	* TerminalView.m
	Method name cleanup.

2013-02-13 Riccardo Mottola <rm@gnu.org>

	* main.m
	Fix memory leak.

2013-02-12 Riccardo Mottola <rm@gnu.org>

	* TerminalView.m
	Free up memory in case of error.

2013-02-12 Riccardo Mottola <rm@gnu.org>

	* ServicesPrefs.m
	NSInteger transition

	* TerminalView.m
	Warning fixes

2013-01-24 Riccardo Mottola <rm@gnu.org>

	* main.m
	Fix warning due to missing import.

2012-04-03 Riccardo Mottola <rm@gnu.org>

	* TerminalView.m
	Fix GNU/HURD includes.

2012-03-28 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* TerminalView.m
	Fix warnings on 64Bit systems, cast from integer to pointer of different size

2012-03-27 Riccardo Mottola <rm@gnu.org>

	* TerminalView.m
	Fix OpenBSD includes.

2012-03-26 Riccardo Mottola <rm@gnu.org>

	* PreferencesWindowController.m
	Use NSUInteger as Index.

2012-03-26 Riccardo Mottola <rm@gnu.org>

	* PreferencesWindowController.[h,m]
	Clean up imports

2012-03-07 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile: